# memoria

./: .gitignore  CLAUDE.md  README.md  index.html  memoria_grouping_planning_support.md  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  test-before.txt  test-my-changes.txt  test-output.txt  tsconfig.json  vite.config.ts
.cursor/plans/: ai_pipeline_settings_plan_f6cdb7bc.plan.md
.cursor/rules/: memoria-stack-best-practices.mdc  playwright-testing-conventions.mdc  rust-tauri-conventions.mdc
.github/workflows/: ci.yml
sidecar/: build.py  icloud_bridge.py  icloud_bridge.spec  requirements.txt
src/: App.tsx  main.tsx  styles.css  themes.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src-tauri/src/commands/: classify.rs  download.rs  image_review.rs  metadata.rs  mod.rs  organize.rs  settings.rs  testing.rs  video_review.rs
src-tauri/src/db/: mod.rs
src-tauri/src/models/: mod.rs
src-tauri/src/services/: ai_client.rs  classifier.rs  date_enforcer.rs  event_grouper.rs  exiftool.rs  file_organizer.rs  geocoding.rs  icloud_bridge.rs  image_analysis.rs  image_review.rs  mod.rs  review_rules.rs  runtime_log.rs  settings.rs  test_fixtures.rs  video_review.rs
src/components/: AppShell.tsx  PageHeader.tsx  ReviewToolbar.tsx  WorkflowStepper.tsx
src/components/Dashboard/: ProgressHero.tsx
src/components/UI/: BrandLogo.tsx  LoadingState.tsx  SuccessToast.tsx
src/lib/: api.ts  responsiveGrid.test.ts  responsiveGrid.ts
tests/ui/browser/: app.browser.spec.ts
(+3 files in other folders)
