[package]
name = "memoria"
version = "0.1.0"
description = "Memoria photo organizer"
authors = ["memoria"]
edition = "2021"

[lib]
name = "memoria_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
anyhow = "1.0"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
image = "0.25.10"
keyring = "3.6"
rand = "0.8"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
rusqlite = { version = "0.32", features = ["bundled", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.2", features = [] }
tauri-plugin-dialog = "2.2"
tauri-plugin-fs = "2.2"
tokio = { version = "1.43", features = ["full"] }

[build-dependencies]
tauri-build = { version = "2.0", features = [] }
